fix: word break for links to fix layout issue

--- a/src/components/Meetup/meetup.module.scss
+++ b/src/components/Meetup/meetup.module.scss
@@ -40,6 +40,7 @@
 
   a {
     text-decoration: none;
+    word-break: break-all;
   }
 }
 
